# PrismQ.RepositoryTemplate

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  QUICK_START.md  README.md  SECURITY.md  module.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  docs.yml
_meta/: README.md
_meta/_scripts/: docs.bat  docs.sh  format.bat  lint.bat  test.bat
_meta/docs/: LOGGING_BEST_PRACTICES.md
_meta/docs/source/: api.rst  conf.py
_meta/issues/done/: .gitkeep
_meta/issues/wip/: .gitkeep
_meta/tests/: __init__.py  test_config.py  test_logging_config.py  test_structure.py
doc/: CONFIGURATION.md  CONFIG_USAGE.md
doc/source/: conf.py  index.rst
docs/: AI_CODING_GUIDELINES.md  CONTRIBUTING.md  DEVELOPMENT_UTILITIES_EVALUATION.md  LOGGING.md  MODULE_CONFIGURATION.md  PEP_STANDARDS.md  README.md  SOLID_PRINCIPLES.md  TEMPLATE_EVALUATION.md
docs/sphinx/source/: conf.py  index.rst  modules.rst
issues/: KNOWN_ISSUES.md  README.md  ROADMAP.md
issues/new/: .gitkeep
mod/: README.md
mod/ModuleExample/: .gitkeep
scripts/: README.md  add-module.bat  add-module.sh  build.bat  check-all.bat  docs.bat  docs.sh  format.bat  format.sh  install-hooks.bat  lint.bat  lint.sh  quickstart.bat  quickstart.sh  setup.bat  setup.sh  setup_db.bat  setup_db.sh  sync-modules.bat  sync-modules.sh  test.bat  test.sh  typecheck.bat
src/: __init__.py  config.py  logging_config.py  main.py
src/PrismQ.RepositoryTemplate.ModuleExample/: .gitignore  README.md  module.json
src/PrismQ.RepositoryTemplate.ModuleExample/src/: __init__.py  config.py  main.py
src/PrismQ.RepositoryTemplate.ModuleExample/tests/: __init__.py  test_config.py  test_main.py
tests/: test_config.py  test_encoding.py  test_logging_config.py  test_structure.py
